Fix some issues ..